# pico-vdp

./: .gitignore  CMakeLists.txt  README.md  audio.c  audio.h  ay.c  blit.c  blittemp.h  circuit.txt  hid.c  hid.h  keymap.c  main.c  mode.c  mode.h  perf.c  perf.h  pins.h  scan_out.c  scan_out.h  section.h  sys80.c  sys80.h  sys80.pio  sys80_test.c  sys80_test.h  sys80_test.pio  test.c  video.c  video.h  video.pio  video_dma.c  video_dma.h
driver/hbios/: font6x8c.asm  font6x8u.asm  font8x10u.asm  font8x8c.asm  font8x8u.asm  main.asm  pvdp.asm  unlzsa2s.asm  vda.asm
firmware/: CMakeLists.txt  audio.c  audio.h  ay.c  ay.h  blit.h  cdc.c  common.h  custom.ld  hid.c  main.c  parallel.c  parallel.h  perf.c  pins.h  scan_out.c  scan_out.h  scan_sprite_templ.h  scan_text_templ.h  scan_tile_templ.h  section.h  supply.c  supply.h  sys80.c  sys80.h  sys80.pio  video.pio  video_dma.c  video_dma.h  video_mem.c  video_mem.h
hardware/: .gitignore  Bill Of Materials.csv  pico-vdp.mop  pico-vdp.pcb  pico-vdp.prj  pico-vdp.sch
hardware/Plots/: pico-vdp - Board Outline.gbr  pico-vdp - Bottom Copper.gbr  pico-vdp - Bottom Silkscreen.gbr  pico-vdp - Bottom Solder Mask.gbr  pico-vdp - Drill Ident Drawing - [Through Hole].gbr  pico-vdp - Gerber Drill Data - [Through Hole].gbr  pico-vdp - Top Copper.gbr  pico-vdp - Top Silkscreen.gbr  pico-vdp - Top Solder Mask.gbr
